# LinuxWindowsCrossCompile

./: .bazelignore  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Hello.h  README.md  WORKSPACE  copy_artifacts.sh  hello_world.cpp  run-build.sh  run-cd.sh  run-ci.sh
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: cmake.yml
src/app/: BUILD  CMakeLists.txt
src/lib/: BUILD  CMakeLists.txt  Hello.cpp  Hello.h
src/tests/: BUILD  CMakeLists.txt  Hello_tests.cpp  basic_tests.cpp  example_tests.cpp
